# tabular

./: Cargo.toml  README.md
data/: data.csv  performance_logs.csv  sales_metrics.csv  security_alerts.csv  threat_intelligence.csv  vulnerability_scan.csv
src/: main.rs
src/config/: mod.rs  server.rs
src/handlers/: dashboard.rs  datasets.rs  home.rs  mod.rs
src/models/: dashboard.rs  mod.rs
src/routes/: mod.rs
src/services/: csv_service.rs  mod.rs
src/template_engine/: mod.rs
templates/: base.html  dashboard.html  datasets.html
