[package]
name = "tabular"
version = "0.1.0"
edition = "2021"
authors = ["Anubhav G"]
description = "A beautiful, modern dashboard for CSV data visualization"
repository = "https://github.com/anubhavg-icpl/tabular"
license = "MIT"

[dependencies]
actix-web = "4.5.1"
tera = "1"
csv = "1.3.0"
env_logger = "0.11.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4"
